# TCP-Minecraft-Server

./: .gitignore  CMakeLists.txt  README.md  todo
src/: main.cpp
src/game/: world.cpp
src/include/: client.hpp  packet.hpp  player.hpp  server.hpp  varint.hpp  world.hpp
src/network/: server.cpp  tcpclient.cpp
src/protocol/: helper.cpp  packet.cpp  varint.cpp
src/world/: NBT.cpp  NBT.hpp  RegionFile.cpp  RegionFile.hpp  WorldSave.cpp  WorldSave.hpp
tests/: test_packet.cpp  test_varint.cpp
